--- a/app/src/main/res/drawable/rectangle_rounded.xml
+++ b/app/src/main/res/drawable/rectangle_rounded.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="20dp"/>
     <padding android:left="15dp" android:right="15dp" android:top="10dp" android:bottom="10dp"/>
-    <solid android:color="#ffb6b6b6"/>
+    <solid android:color="#ff0000"/>
 </shape>
