--- a/app/src/main/res/layout/fragment_shows_list.xml
+++ b/app/src/main/res/layout/fragment_shows_list.xml
@@ -22,7 +22,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton" />
+            android:id="@+id/image_button_search" />
 
     </LinearLayout>
 
