--- a/app/src/main/res/layout/fragment_complete_information.xml
+++ b/app/src/main/res/layout/fragment_complete_information.xml
@@ -20,4 +20,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/text_view_show_channel_complete_information" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_add_to_calendar"
+        android:id="@+id/button_add_to_calendar" />
 </LinearLayout>
