--- a/app/src/main/res/layout/fragment_shows_list.xml
+++ b/app/src/main/res/layout/fragment_shows_list.xml
@@ -29,7 +29,7 @@
     </LinearLayout>
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@android:id/list" />
 </LinearLayout>
