--- a/app/src/main/res/layout/fragment_shows_list.xml
+++ b/app/src/main/res/layout/fragment_shows_list.xml
@@ -23,8 +23,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/image_button_search"
-            android:src="@drawable/search"
-            android:background="@drawable/rectangle_rounded"/>
+            android:src="@drawable/Searchmedium"
+            android:background="@drawable/rectangle_rounded"
+            android:contentDescription="@string/image_button_search_description"/>
 
     </LinearLayout>
 
