Added transition effecto to searchbar and fixed Enabled or Disabled state for Imagebutton in searchbar
Created CustromListener class

--- a/app/src/main/res/layout/fragment_shows_list.xml
+++ b/app/src/main/res/layout/fragment_shows_list.xml
@@ -18,16 +18,17 @@
             android:layout_height="45dp"
             android:id="@+id/edit_text_search_list"
             android:hint="@string/edit_text_show_list_search_hint"
-            android:background="@drawable/rectangle_rounded_edit_texts"
-            android:layout_weight="1" />
+            android:background="@drawable/transition_edittext"
+            android:layout_weight="1"
+            android:autoText="true"/>
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:id="@+id/image_button_search"
             android:src="@drawable/searchmedium"
-            android:background="@drawable/rectangle_rounded_imagebutton_with_edittext"
-            android:contentDescription="@string/image_button_search_description"/>
+            android:contentDescription="@string/image_button_search_description"
+            android:background="@drawable/transition_imagebutton" />
 
     </LinearLayout>
 
