--- a/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_disabled.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_disabled.xml
@@ -5,13 +5,6 @@
         android:bottomRightRadius="20dp"
         android:topLeftRadius="0dp"
         android:bottomLeftRadius="0dp"/>
-    <padding
-        android:bottom="10dp"
-        android:left="60dp"
-        android:right="10dp"
-        android:top="10dp" />
-    <gradient
-        android:angle="180"
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF" />
+
+    <solid android:color="#ffffff"/>
 </shape>
