Added transition effect to searchbar and fixed Enabled or Disabled state for Imagebutton in mainscreen
Created CustromListener class

--- a/app/src/main/res/drawable/rectangle_rounded_edit_texts_empty.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_edit_texts_empty.xml
@@ -8,6 +8,6 @@
 
     <gradient
         android:angle="0"
-        android:startColor="#55000066"
+        android:startColor="@color/accent"
         android:endColor="#FFFFFF" />
 </shape>
