--- a/app/src/main/res/drawable/rectangle_rounded_edit_texts_filled.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_edit_texts_filled.xml
@@ -6,5 +6,5 @@
         android:topLeftRadius="20dp"
         android:bottomLeftRadius="20dp" />
 
-    <solid android:color="#55000066"/>
+    <solid android:color="@color/accent"/>
 </shape>
