--- a/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_enabled.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_enabled.xml
@@ -6,5 +6,5 @@
         android:topLeftRadius="0dp"
         android:bottomLeftRadius="0dp"/>
 
-    <solid android:color="#55000066"/>
+    <solid android:color="@color/accent"/>
 </shape>
