--- a/app/src/main/res/layout/fragment_start_screen.xml
+++ b/app/src/main/res/layout/fragment_start_screen.xml
@@ -10,6 +10,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView_start_screen"
+        android:src="@drawable/remindmetvmedium" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,7 +38,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="30dp" />
 
     <EditText
         android:layout_width="wrap_content"
