--- a/app/src/main/res/drawable/rectangle_rounded_edit_texts_filled.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_edit_texts_filled.xml
@@ -5,6 +5,6 @@
         android:bottomRightRadius="0dp"
         android:topLeftRadius="20dp"
         android:bottomLeftRadius="20dp" />
-
+    <stroke android:width="4px" android:color="#000000"/>
     <solid android:color="@color/accent"/>
 </shape>
