--- a/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_enabled.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_imagebutton_with_edittext_enabled.xml
@@ -5,6 +5,6 @@
         android:bottomRightRadius="20dp"
         android:topLeftRadius="0dp"
         android:bottomLeftRadius="0dp"/>
-
+    <stroke android:width="4px" android:color="#000000"/>
     <solid android:color="@color/accent"/>
 </shape>
