--- a/app/src/main/res/layout/fragment_complete_information.xml
+++ b/app/src/main/res/layout/fragment_complete_information.xml
@@ -25,8 +25,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/textView_info"
         android:id="@+id/textView_info"
-        android:layout_gravity="right"
-        android:layout_marginRight="15dp" />
+        android:layout_gravity="left"
+        android:layout_marginLeft="25dp" />
 
     <LinearLayout
         android:orientation="vertical"
