EventsListFragment shows the events list

--- a/app/src/main/res/layout/fragment_start_screen.xml
+++ b/app/src/main/res/layout/fragment_start_screen.xml
@@ -59,7 +59,8 @@
                 android:layout_height="45dp"
                 android:gravity="center"
                 android:hint="@string/editText_startscreen_search_hint"
-                android:background="@drawable/transition_edittext_main_screen" />
+                android:background="@drawable/transition_edittext_main_screen"
+                android:maxLines="1"/>
 
             <ImageButton
                 android:id="@+id/imageButton_startscreen_search"
