--- a/app/src/main/res/layout/fragment_shows_list.xml
+++ b/app/src/main/res/layout/fragment_shows_list.xml
@@ -22,7 +22,8 @@
             android:hint="@string/edit_text_show_list_search_hint"
             android:background="@drawable/transition_edittext"
             android:layout_weight="1"
-            android:autoText="true"/>
+            android:autoText="true"
+            android:maxLines="1"/>
 
         <ImageButton
             android:layout_width="wrap_content"
