--- a/app/src/main/res/layout/fragment_complete_information.xml
+++ b/app/src/main/res/layout/fragment_complete_information.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/text_view_name_complete_information"
-        android:textSize="20sp"/>
+        android:textSize="40sp"/>
 
     <Space
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
         android:text="@string/textView_info"
         android:id="@+id/textView_info"
         android:layout_gravity="left"
-        android:layout_marginLeft="25dp" />
+        android:layout_marginLeft="15dp" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -87,6 +87,10 @@
                 android:text="@string/textView_link_tag"
                 android:id="@+id/textView_link_tag"
                 android:textColor="@color/primary_text"/>
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
 
             <TextView
                 android:layout_width="wrap_content"
